--- a/compmgr.cabal
+++ b/compmgr.cabal
@@ -12,4 +12,4 @@ cabal-version:          >= 1.2
 Executable compmgr
     Main-Is:            compmgr.hs
     build-depends:	base >= 3 && < 5, X11, X11-xdamage, X11-xcomposite
-    ghc-options:        -Wall
+    ghc-options:        -Wall -fno-warn-unused-do-bind
